# tempo-screen

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  app_ui.cpp  app_ui.hpp  color_manip.cpp  color_manip.hpp  colorm.hpp  colors.hpp  device.hpp  esp32s3.hpp  idf_component.yml  lcd_command.hpp  lcd_init_cmd.hpp  lv_conf.h  main.cpp  mqtt.cpp  mqtt.hpp  spi_lcd.hpp  spi_transactors.hpp  wifi.cpp  wifi.hpp
main/data_model/: electricity_rate_provider.cpp  electricity_rate_provider.hpp  home_assistant_electricity_rate_provider.cpp
main/date/: date.h  ptz.h  tz.h
main/fonts/: CourierPrimeBold14.c  CourierPrimeBold40.c  CourierPrimeRegular14.c
main/images/: wifi.c
main/view_model/: ha_electricity_rate_viewmodel.hpp  static_electricity_rate_viewmodel.hpp
